# codec-mbox

./: codec-mbox.cabal  mbox.cabal
Codec/: Mbox.hs
